# BLINK_API

./: .gitignore  CMakeLists.txt  README.md  README_API.md  build.sh  pack_api.sh
configs/api_plagins/: default_plagin.conf
configs/api_plugins/: AOutput.conf  Logger.conf  default_plugin.conf
include/blink_api/: PluginManager.h  api.h  version.h.in
include/blink_api/abstractions/: .AInput.h.swp  AInput.h  ALogger.h  AOutput.h  AParser.h  AScriptEngine.h
include/blink_api/fakes/: ALoggerFake.h  AParserFake.h  LoggerFake.h  ParserFake.h
include/blink_api/stubs/: AInputStub.h  ALoggerStub.h  AOutputStub.h  AParserStub.h  AScriptEngineStub.h  InputStub.h  LoggerStub.h  OutputStub.h  ParserStub.h  ScriptEngineStub.h
src/: PluginManager.cpp  api.cpp
src/fakes/: ALoggerFake.cpp  AParserFake.cpp  LoggerFake.cpp  ParserFake.cpp
src/stubs/: .AParserStub.cpp.swp  AInputStub.cpp  ALoggerStub.cpp  ALogger_stub.cpp  AOutputStub.cpp  AOutput_stub.cpp  AParserStub.cpp  AScriptEngineStub.cpp  InputStub.cpp  LoggerStub.cpp  OutputStub.cpp  ParserStub.cpp  ScriptEngineStub.cpp
